# SYSMODwithSysMLv2

./: .gitignore  .meta.json  .project.json  ChangeLog.md  README.md  SYSMOD-Example-ForestFireObservationSystem-SysMLv2.sysml  SYSMOD-MinimalViableModel-Towel42.sysml  SYSMOD-Zigzag-Pattern.sysml  SYSMOD.sysml  SYSMODExtended.sysml  SYSMODwithSysMLv2.mdzip  SYSMODwithSysMLv2.mdzip.bak  Sandbox.sysml  SysandLock.toml  elements.json
.claude/skills/brownfield-architecture-create/: SKILL.md
.claude/skills/problem-statement-create/: SKILL.md
.claude/skills/project-create/: SKILL.md
.claude/skills/project-owner-create/: SKILL.md
.claude/skills/stakeholder-analysis/: SKILL.md
.claude/skills/stakeholder-create/: SKILL.md
.github/workflows/: sysand.yml
api/: sysmod-api-server.py  sysmod_api_helpers.py  test_caching.py
api/sysmodWeb/: index.html  project.html
examples/: DeliveryDrone-Model.sysml
mbse4u-sysmlv2/: README.md  mbse4u_sysmlv2_api_helpers.py  pyproject.toml
mbse4u-sysmlv2/mbse4u_sysmlv2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sysmod-viewer/: sysmod_api_helpers.py  sysmod_api_server.py
sysmod-viewer/doc/: SYSMODTemplate.docm
sysmod-viewer/html/: index.html  project.html
